Update meta desc

--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Shorepound</title>
-        <meta name="description" content="If you're a programmer with an appetite for delicious, healhty foods, you've come to the right place.">
+        <meta name="description" content="More Nathan Arnold. More shorepound.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
