--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,7 @@
         <![endif]-->
         <section class="main-content">
           <h1>Shorepound</h1>
-          
+          <p><a href="http://shorepound.net">visit my other site</a></p>
         </section>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
