Add linkedin profile

--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,8 @@
         <![endif]-->
         <section class="main-content">
           <h1>Shorepound</h1>
-          <p>Sesoned developer with gas in the tank.</p>
+          <p>Sesoned web application developer with plenty of gas in the tank.</p>
+          <p><a href="https://www.linkedin.com/in/shorepound/" target="_blank">LinkedIn Profile</a></p>
 
             
         </section>
