Add descriptive text

--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Shorepound</title>
+        <title>Nathan Arnold</title>
         <meta name="description" content="More Nathan Arnold. More shorepound.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/normalize.css">
@@ -18,7 +18,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <section class="main-content">
-          <h1>Shorepound</h1>
+          <h1>Nathan Arnold</h1>
           <p>Sesoned web application developer with plenty of gas in the tank.</p>
           <p><a href="https://www.linkedin.com/in/shorepound/" target="_blank">LinkedIn Profile</a></p>
 
